--- a/index.html
+++ b/index.html
@@ -14,8 +14,31 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="estilos.css" />
+    <link
+      rel="shortcut icon"
+      href="./img/MundoTech logo with computers.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
+    <header></header>
+    <main></main>
+    <footer>
+      <img
+        src="./img/MundoTech logo with computers.png"
+        alt="logo"
+        width="200"
+      />
+      <ul class="menu">
+        <li><a href="">Facebook</a></li>
+        <li><a href="">Instagram</a></li>
+        <li><a href="">Youtube</a></li>
+      </ul>
+      <ul class="menu">
+        <li><a href="">Politica de privacidad</a></li>
+        <li><a href="">Terminos de uso</a></li>
+      </ul>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
