--- a/index.html
+++ b/index.html
@@ -58,7 +58,53 @@
         </div>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <div id="carouselExample" class="carousel slide">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="./img/pc-ia-puedes-anadir-inteligencia-artificial-ordenador-actual-3454221.webp"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./img/Programacion-informatica-scaled-e1724960033513.jpg"
+                class="d-block w-100"
+                alt=""
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="./img/Samsung-Galaxy-S25-Ultra-vs-iPhone-16-Pro-Max-bezels-comparison-featured.webp"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExample"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </section>
+    </main>
     <footer>
       <img
         src="./img/MundoTech logo with computers.png"
