se agregaron las cards

--- a/index.html
+++ b/index.html
@@ -104,8 +104,41 @@
           </button>
         </div>
       </section>
+      <h2 class="my-5 text-center">Bienvenidos a nuestro Blog</h2>
+      <section class="d-flex justify-content-evenly">
+        <div class="card" style="width: 18rem">
+          <img src="./img/descarga.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Deepseek la nueva IA</h5>
+            <p class="card-text">
+              Por qué DeepSeek ha tumbado con su IA a los gigantes de Silicon
+              Valley.
+            </p>
+            <a href="#" class="btn btn-propio">Abrir articulo</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img src="./img/descarga.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">HTML</h5>
+            <p class="card-text">¿Que es HTML y para que sirve?.</p>
+            <br />
+            <br />
+            <a href="#" class="btn btn-propio">Abrir articulo</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img src="./img/images.jpg" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Samsung s25</h5>
+            <p class="card-text">¿Que novedades trae el nuevo Samsung s25?.</p>
+            <br />
+            <a href="#" class="btn btn-propio">Abrir articulo</a>
+          </div>
+        </div>
+      </section>
     </main>
-    <footer>
+    <footer class="mt-5">
       <img
         src="./img/MundoTech logo with computers.png"
         alt="logo"
